humble_ws/log/build_2024-06-03_19-56-39/antworker_moveit_bringup/stderr.log
  File "/home/humble_ws/install/antworker_moveit_bringup/lib/python3.10/site-packages/antworker_moveit_bringup/trajectory_server_sim.py", line 37
    self.tf_target_listener = TransformListener(self.target_tf_buffer, topic='tf_target', self)
                                                                                              ^
SyntaxError: positional argument follows keyword argument

